# 04-product-graph-recommender

./: .gitignore  Build-Plan.md  CLAUDE.md  PRD.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: health.py
backend/scripts/: download_data.py
db/: init.sql
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/filters/: route.ts
frontend/src/app/api/health/: route.ts
frontend/src/app/api/products/[id]/: route.ts
frontend/src/app/api/recommendations/[id]/: route.ts
frontend/src/app/api/search/: route.ts
frontend/src/app/api/stats/: route.ts
frontend/src/app/products/[id]/: page.tsx
frontend/src/lib/: format.ts  supabase.ts  types.ts
pipeline/: .env.example  download_data.py  ingest.py  normalize.py  pyproject.toml  seed.py
