[project]
name = "product-graph-recommender"
version = "0.1.0"
description = "Product intelligence system with entity resolution, semantic search, and recommendations"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "duckdb>=1.0",
    "scikit-learn>=1.5",
    "sentence-transformers>=3.0",
    "pandas>=2.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
